[package]
name = "task_rustler"
version = "0.2.3"
authors = ["r366y"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
ratatui = "0.28.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "1.0.64"

